# mono

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  dockerfile  s3n_config.toml
.github/workflows/: integration.yml
contracts/anvil/: deploy-avs-save-anvil-state.sh
contracts/script/: IncredibleSquaringDeployer.s.sol
contracts/src/: IS3NTaskManager.sol  S3NServiceManager.sol  S3NTaskManager.sol
crates/aggregator/: Cargo.toml
crates/aggregator/src/: error.rs  fake_aggregator.rs  lib.rs  rpc_server.rs
crates/avs/: Cargo.toml
crates/avs/src/builder/: mod.rs
crates/bindings/: Cargo.toml  S3NServiceManager.json  S3NTaskManager.json
crates/bindings/src/: lib.rs
crates/chainio/: Cargo.toml
crates/chainio/src/: error.rs  fake_avs_writer.rs  lib.rs
crates/challenger/: Cargo.toml
crates/challenger/src/: error.rs  fake_challenger.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/operator/: Cargo.toml
crates/operator/src/: builder.rs  client.rs  error.rs
crates/task_generator/: Cargo.toml
crates/task_generator/src/: lib.rs
crates/testing-utils/: Cargo.toml
crates/testing-utils/src/: lib.rs
execution/: .gitignore  .gitkeep  Cargo.toml  Makefile  README.md  create-cluster.sh  dockerfile  generate_keys.sh  opacity-avs-node.manifest.template
execution/config/: config.yaml
execution/src/: main.rs
execution/tests/: integration_test.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
syncer/: .gitignore  Cargo.toml  go.mod  go.sum  main.go
syncer/src/: main.rs
validation/: .gitignore  Cargo.toml
