[package]
name = "integration-tests"
version = "0.0.1-alpha"
edition = "2021"
rust-version = "1.79"
repository = "https://github.com/0xZeroLabs/s3n"
homepage = ""
license = "Business Source License 1.1"
description = "integration tests for s3n avs"

[dependencies]
alloy = { version = "0.1", features = ["full","signer-keystore","node-bindings"] }
eigen-utils = {git = "https://github.com/layr-labs/eigensdk-rs" , rev = "e01b594"}
eigen-logging = {git = "https://github.com/layr-labs/eigensdk-rs" , rev = "e01b594"}
s3n-config = {path = "../crates/config/"}
s3n-challenger = {path = "../crates/challenger/"}
s3n-bindings = {path = "../crates/bindings/"}
s3n-testing-utils = {path = "../crates/testing-utils/"}
s3n-task-generator = {path = "../crates/task_generator/"}
s3n-operator = {path = "../crates/operator/" , features = ["integration_tests"]}
s3n-aggregator = {path = "../crates/aggregator/"}
toml = "0.8"

[dev-dependencies]
tokio = { version = "1.21", default-features = false }
eyre = "0.6.12"
s3n = {path = "../bin/s3n/"}
eigen-testing-utils = {git = "https://github.com/layr-labs/eigensdk-rs" , rev = "e01b594"}
serial_test = "3.1.1"


[workspace]