[package]
name = "s3n-avs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible avs builder "
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
serde.workspace = true
eyre.workspace = true
tracing.workspace = true
metrics.workspace = true
metrics-util = "0.17.0"

#incredible
s3n-config.workspace = true
s3n-operator.workspace = true
s3n-challenger.workspace = true
s3n-aggregator.workspace = true
s3n-task-generator.workspace = true
s3n-metrics.workspace = true
eigen-nodeapi.workspace = true
#tokio
tokio.workspace = true

#futures
futures = "0.3.30"

#thiserror
thiserror.workspace = true

clap.workspace = true
ntex = { version = "2.0", features = ["tokio"] }
