[package]
name = "s3n-challenger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible squaring challenger "
    
[lints]
workspace = true

[dependencies]
s3n-config.workspace = true
eyre.workspace = true
alloy-provider.workspace = true
s3n-bindings.workspace = true
futures-util.workspace = true
alloy.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml.workspace = true
#incredible
s3n-testing-utils.workspace = true
s3n-chainio.workspace = true

#eigen-rs
eigen-utils.workspace = true

[dev-dependencies]
s3n-task-generator.workspace = true