[package]
name = "s3n-cli-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "=s3n cli runner utils "
    
[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true