[package]
name = "s3n-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "s3n-metrics"
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
alloy-provider.workspace = true
s3n-config.workspace = true
thiserror.workspace = true
s3n-bindings.workspace = true
eyre.workspace = true
futures-util.workspace = true

# eigen-rs
metrics.workspace = true
metrics-util = "0.17.0"

[dev-dependencies]
eigen-metrics.workspace = true
tokio.workspace = true
reqwest.workspace = true