[package]
name = "s3n-operator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer operator"
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
alloy-provider.workspace = true
s3n-config.workspace = true
thiserror.workspace = true
s3n-bindings.workspace = true
eyre.workspace = true
futures-util.workspace = true

# eigen-rs
eigen-client-avsregistry.workspace = true
eigen-crypto-bls.workspace = true
eigen-cli.workspace = true
eigen-types.workspace = true

s3n-metrics.workspace = true

rust-bls-bn254.workspace = true

#incredible
s3n-aggregator.workspace = true
reqwest.workspace = true

hex = {version =  "0.4.3" , features = ["alloc"]}
tokio.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
rand_core.workspace = true
eigen-logging.workspace = true
eigen-crypto-bn254.workspace = true
eigen-metrics-collectors-rpc-calls.workspace = true
eigen-client-eth.workspace = true
eigen-utils.workspace = true

[dev-dependencies]
s3n-testing-utils.workspace = true
tempfile.workspace = true
ark-ec = "0.4.2"
ark-ff = "0.4.0"

[features]
default = []
integration_tests = []